--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<img class="logo" src="Bdollar.jpg" alt="Logo">
 		<div class="text-container">
 			<h1>Binance Unity Dollar (Bdollar)</h1>
-			<p>Buy and trade tokens easily on PancakeSwap by clicking on the "Buy" button.</p>
+			<p>Buy and trade tokens easily on 1inch Dex by clicking on the "Buy" button.</p>
 			<a href="https://app.1inch.io/#/56/classic/swap/WBNB/Bdollar" class="buy-button">Buy Now</a>
 		</div>
 	</div>
