--- a/community.html
+++ b/community.html
@@ -1,1 +1,16 @@
-<a href="https://www.facebook.com/binanceunitydollar" target="_blank" style="color: brown; font-size: 24px; font-weight: 300;">Join our Community on Facebook</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Follow us on Facebook and Discord</title>
+    <style>
+      body {
+        color: brown;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Follow us on Facebook and Discord</h1>
+    <p>If you're interested in staying up-to-date with our latest updates, please follow our <a href="https://m.facebook.com/binanceunitydollarsocial">Facebook page</a>! You'll be able to receive notifications about our latest posts and engage with our community.</p>
+    <p>Additionally, if you'd like to contact us directly or chat with other members of our community, feel free to join our <a href="https://discord.gg/bkq247fV">Discord server</a>. It's a great way to connect with like-minded individuals and stay up-to-date with all the latest news.</p>
+  </body>
+</html>
