--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<a href="#">Home</a>
 		<a href="community.html">Community</a>
 		<a href="binanceunitydollarWhitePaper.pdf">White Paper</a>
-		<a href="About Us.html"></a>
+		<a href="About Us.html">About Us</a>
 	</nav>
 
 	<div class="logo-container">
