--- a/About Us.html
+++ b/About Us.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <base href="http://localhost:8080/">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G2153LYE6N"></script>
 <script>
