--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="p:domain_verify" content="c4ab01c23bcac044799187613e5a4184"/>
 	<link rel="shortcut icon" href="Bdollar.ico">
+	<link rel="tag" href="gtag.js">
 	<title>Welcome to Our Website</title>
 	<!-- Add CSS Stylesheet Here -->
 	<style>
