--- a/community.html
+++ b/community.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <title>Follow us on Facebook and Discord</title>
+    	<link rel="tag" href="gtag.js">
+    <title>Follow us on Facebook and Discord</title>
     <style>
       body {
         color: brown;
