--- a/About Us.html
+++ b/About Us.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    	<link rel="tag" href="gtag.js">
     <meta charset="UTF-8">
     <title>About Us</title>
     <style>
