--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="p:domain_verify" content="c4ab01c23bcac044799187613e5a4184"/>
+	<meta name="monetag" content="6cb76f355fb6d0cf3a5de6903770fa88">
 	<link rel="shortcut icon" href="Bdollar.ico">
 	<link rel="tag" href="gtag.js">
 	<title>Welcome to Our Website</title>
